<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_pdf"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/pdf"
        app:showAsAction="ifRoom"/>

</menu>